Renable hints + stacktrace + linetrace

--- a/tests/nim.cfg
+++ b/tests/nim.cfg
@@ -1,7 +1,7 @@
 # $projectPath is tests/
 path = "$projectPath/../src"
-hints = off
+hints = on
 linedir = on
 debuginfo
-stacktrace = off
-linetrace = off
+stacktrace = on
+linetrace = on
